--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.css">
     <title>vue-todo</title>
   </head>
   <body>
-    <div id="app"></div>
+      <div class="container">
+        <div id="app"></div>
+        </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
